Using Texture nodes for World nodes, crashes Blender when trying to render on GPU (OpenCL) #53098

Closed
opened 2017-10-18 01:08:32 +02:00 by Claudio D. · 5 comments

System Information
Windows 10 Pro
Radeon RX Vega 64

Blender Version
Broken: 2.79.1 67e0a44 2017-10-16 11:45
Worked: 2.79 5bd8ac9 2017-09-11 10:43

Short description of error
While on GPU compute, adding any Texture Node to the World node setup, crashes Blender when trying to render. It works fine on CPU compute.

Exact steps for others to reproduce the error

  1. Set GPU as compute device.
  2. Use nodes for World.
  3. Add any Texture Node and connect it to the default Background node.
  4. Hit Shift+Z on the 3d viewport to render view.

texture node crash.blend

**System Information** Windows 10 Pro Radeon RX Vega 64 **Blender Version** Broken: 2.79.1 67e0a44 2017-10-16 11:45 Worked: 2.79 5bd8ac9 2017-09-11 10:43 **Short description of error** While on GPU compute, adding any Texture Node to the World node setup, crashes Blender when trying to render. It works fine on CPU compute. **Exact steps for others to reproduce the error** 1. Set GPU as compute device. 2. Use nodes for World. 3. Add any Texture Node and connect it to the default Background node. 4. Hit Shift+Z on the 3d viewport to render view. [texture node crash.blend](https://archive.blender.org/developer/F1046020/texture_node_crash.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @claudio-10

Added subscriber: @claudio-10

This issue was referenced by blender/cycles@d1d87183dc

This issue was referenced by blender/cycles@d1d87183dc94980e61df6639c89c0d6d538f4f52

This issue was referenced by 92611dada6

This issue was referenced by 92611dada67fcc151c894462749031be1de27191

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53098
No description provided.