Fix T53098, T53079: OpenCL world texture errors after recent changes.